fix: header z-index 설정

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -12,7 +12,6 @@
 
 .content {
     padding-top: 10vh;
-    z-index: 1;
 }
 
 .content .coffee-txt {
@@ -32,9 +31,9 @@
 }
 
 .skill-area {
+    position: absolute;
     width: 100%;
     height: 50%;
-    position: absolute;
     top: 50%;
     display: flex;
     justify-content: center;
